WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
83123
[GTK] ASSERT in SocketStreamHandleSoup.cpp
https://bugs.webkit.org/show_bug.cgi?id=83123
Summary
[GTK] ASSERT in SocketStreamHandleSoup.cpp
Philippe Normand
Reported
2012-04-04 01:27:45 PDT
http/tests/websocket/tests/hybi/workers/worker-reload.html asserts in Debug build: #0 0x00007fb9c112da94 in WTF::GOwnPtr<_GError>::outPtr (this=0x7fff0af30530) at ../../Source/WTF/wtf/gobject/GOwnPtr.h:60 60 ASSERT(!m_ptr); #0 0x00007fb9c112da94 in WTF::GOwnPtr<_GError>::outPtr (this=0x7fff0af30530) at ../../Source/WTF/wtf/gobject/GOwnPtr.h:60 #1 0x00007fb9c1b763fc in WebCore::connectedCallback (client=0x6071f70, result=0x606dc00, id=0x189) at ../../Source/WebCore/platform/network/soup/SocketStreamHandleSoup.cpp:247 #2 0x00007fb9bedd2a83 in g_simple_async_result_complete () from /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Dependencies/Root/lib64/libgio-2.0.so.0 #3 0x00007fb9beddae96 in g_socket_client_async_connect_complete () from /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Dependencies/Root/lib64/libgio-2.0.so.0 #4 0x00007fb9beddb789 in g_socket_client_enumerator_callback () from /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Dependencies/Root/lib64/libgio-2.0.so.0 #5 0x00007fb9bedd2a83 in g_simple_async_result_complete () from /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Dependencies/Root/lib64/libgio-2.0.so.0 #6 0x00007fb9bede1f2e in complete_async () from /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Dependencies/Root/lib64/libgio-2.0.so.0 #7 0x00007fb9bede23be in address_enumerate_cb () from /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Dependencies/Root/lib64/libgio-2.0.so.0 #8 0x00007fb9bedd2a83 in g_simple_async_result_complete () from /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Dependencies/Root/lib64/libgio-2.0.so.0 #9 0x00007fb9bedd2acf in complete_in_idle_cb () from /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Dependencies/Root/lib64/libgio-2.0.so.0 #10 0x00007fb9bec5e3f3 in g_idle_dispatch () from /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Dependencies/Root/lib64/libglib-2.0.so.0 #11 0x00007fb9bec5bc8a in g_main_dispatch () from /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Dependencies/Root/lib64/libglib-2.0.so.0 #12 0x00007fb9bec5c950 in g_main_context_dispatch () from /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Dependencies/Root/lib64/libglib-2.0.so.0 #13 0x00007fb9bec5cb3a in g_main_context_iterate () from /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Dependencies/Root/lib64/libglib-2.0.so.0 #14 0x00007fb9bec5cf70 in g_main_loop_run () from /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Dependencies/Root/lib64/libglib-2.0.so.0 #15 0x00007fb9bfb33e99 in gtk_main () from /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Dependencies/Root/lib64/libgtk-3.so.0 #16 0x000000000045b5ac in runTest (testPathOrURL=...) at ../../Tools/DumpRenderTree/gtk/DumpRenderTree.cpp:705 #17 0x000000000045ac24 in runTestingServerLoop () at ../../Tools/DumpRenderTree/gtk/DumpRenderTree.cpp:492 #18 0x000000000045dc40 in main (argc=2, argv=0x7fff0af313a8) at ../../Tools/DumpRenderTree/gtk/DumpRenderTree.cpp:1387
Attachments
Patch
(1.87 KB, patch)
2012-04-04 07:59 PDT
,
Sergio Villar Senin
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sergio Villar Senin
Comment 1
2012-04-04 07:59:00 PDT
Created
attachment 135590
[details]
Patch
Sergio Villar Senin
Comment 2
2012-04-04 08:15:37 PDT
Comment on
attachment 135590
[details]
Patch Clearing flags on attachment: 135590 Committed
r113189
: <
http://trac.webkit.org/changeset/113189
>
Sergio Villar Senin
Comment 3
2012-04-04 08:15:44 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug